--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>my server</title>
+    <title>my server2</title>
     <link rel="stylesheet" type="text/css" href="static\style.css">
 </head>
 <body>
